Fixed spacing issues & navbar transparency.

--- a/style.css
+++ b/style.css
@@ -47,5 +47,15 @@ body {
     opacity: .5;
 }
 
+img {
+    opacity: none;
+}
+
+.navbar {
+    background-color: seashell;
+    opacity: .5;
+}
+
+
 
 
